--- a/onvif/Cargo.toml
+++ b/onvif/Cargo.toml
@@ -37,6 +37,7 @@ xsd-macro-utils = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3
 xsd-types = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
 yaserde = "0.7.1"
 yaserde_derive = "0.7.1"
+multicast-socket = "0.2.2"
 
 [dev-dependencies]
 dotenv = "0.15.0"
